Changes smallscreen breakpoint to avoid overlap on current site

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -485,7 +485,7 @@ $color-dark-gray: #282828;
 
 
   // Smaller screens
-  @media screen and (max-width: 640px) {
+  @media screen and (max-width: 1040px) {
 
     table thead .small-table-label {
       display: inline;
